# cppskel

./: CMakeLists.txt  Dockerfile
src/: CMakeLists.txt
src/include/: Config.h.in  mysqrt.h
src/lib/: CMakeLists.txt
src/lib/my_lib/: CMakeLists.txt  mysqrt.cpp
src/my_exe/: CMakeLists.txt  main.cpp
